[package]
name = "laykeymap"
version = "0.1.0"
authors = ["Samvel Abrahamyan <=>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uinput = "0.1.3"
uinput-sys = "0.1.7"
ioctl-rs = "0.2"
serde_json = "1.0"
nix = "0.18.0"
inotify = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
mio = { version = "0.7", features = ["os-poll", "tcp", "os-util"]}
pretty_env_logger = "0.4.0"
log = "0.4"
