[package]
name = "kbct"
version = "0.1.0"
authors = ["Samvel Abrahamyan <=>"]
edition = "2018"

[[bin]]
name = "kbct"
path = "src/main.rs"

[lib]
name = "kbct"
path = "src/kbct.rs"


[target.'cfg(target_os="linux")'.dependencies]
uinput = "0.1.3"
uinput-sys = "0.1.7"

[dependencies]
clap = "3.0.0-beta.2"
maplit = "1.0.2"
ioctl-rs = "0.2"
serde_yaml = "0.8"
serde_json = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
nix = "0.18.0"
inotify = "0.8.3"
mio = { version = "0.7", features = ["os-poll", "tcp", "os-util"] }
pretty_env_logger = "0.4.0"
log = "0.4"
chrono = "0.4.13"
text_io = "0.1.8"
lazy_static = "1.4.0"
regex = "1.4.2"
compare = "0.1.0"
linked-hash-map = "0.5.3"
